# dioni

./: Cargo.toml  README.md
src/: args_parsing.rs  error.rs  error_handling.rs  main.rs  spotify.rs  tracks.rs  utils.rs
static/: auth-error.html  auth-ok.html
