[package]
name = "dioni"
description = "Real random for Spotify!"
version = "0.1.0"
authors = ["Rafael Escobar <rescobar@protonmail.com>"]
repository = "https://github.com/Nhanderu/dioni/"
license = "Unlicense"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["spotify", "cli", "shuffle", "random"]
edition = "2018"

[dependencies]
rspotify = "0.10"
webbrowser = "0.5"
tokio = { version = "0.2", features = ["full"] }
dirs-next = "1.0"
rand = "0.7"
